--- a/bugs/Dima.Api/appsettings.json
+++ b/bugs/Dima.Api/appsettings.json
@@ -2,7 +2,7 @@
   "FrontendUrl": "http://localhost:5028",
   "BackendUrl": "http://localhost:5164",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost;Database=dimadb;Trusted_Connection=true; TrustServerCertificate=True"
   },
   "StripeApiKey": "",
   "Logging": {
