--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,7 +1,7 @@
 name: Build and Test
 env:
-  BaltaSlnPath: ./unit-tests/Balta.sln
-  DimaSlnPath: ./bugs/Dima.sln
+  BaltaSlnPath: "./unit-tests/Balta.sln"
+  DimaSlnPath: "./bugs/Dima.sln"
 
 on:
   push:
