--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,7 +1,7 @@
 name: Build and Test
 env:
-  BaltaSlnPath: "./unit-tests/Balta.sln"
-  DimaSlnPath: "./bugs/Dima.sln"
+  BALTA_SLN_PATH: "./unit-tests/Balta.sln"
+  DIMA_SLN_PATH: "./bugs/Dima.sln"
 
 on:
   push:
@@ -12,15 +12,15 @@ jobs:
   restore-and-build-dima:
     uses: ./.github/workflows/restore-and-build.yml
     with:
-      solution-path: $DimaSlnPath
+      solution-path: ${{ env.DIMA_SLN_PATH }}
 
   restore-and-build-balta:
     uses: ./.github/workflows/restore-and-build.yml
     with:
-      solution-path: $BaltaSlnPath
+      solution-path: ${{ env.BALTA_SLN_PATH }}
 
   test:
     needs: [restore-and-build-balta]
     uses: ./.github/workflows/test.yml
     with:
-        solution-path: $BaltaSlnPath
+        solution-path: ${{ env.BALTA_SLN_PATH }}
