--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,15 +12,15 @@ jobs:
   restore-and-build-dima:
     uses: ./.github/workflows/restore-and-build.yml
     with:
-      solution-path: ${{ env.DIMA_SLN_PATH }}
+      solution-path: "${{ env.DIMA_SLN_PATH }}"
 
   restore-and-build-balta:
     uses: ./.github/workflows/restore-and-build.yml
     with:
-      solution-path: ${{ env.BALTA_SLN_PATH }}
+      solution-path: "${{ env.BALTA_SLN_PATH }}"
 
   test:
     needs: [restore-and-build-balta]
     uses: ./.github/workflows/test.yml
     with:
-        solution-path: ${{ env.BALTA_SLN_PATH }}
+        solution-path: "${{ env.BALTA_SLN_PATH }}"
