--- a/.github/workflows/restore-build-test.yml
+++ b/.github/workflows/restore-build-test.yml
@@ -8,6 +8,10 @@ on:
         type: string
 
 jobs:
+  restore-and-build:
+    uses: ./.github/workflows/restore-and-build.yml
+    with:
+      solution-path: ${{ inputs.solution-path }}
   test:
     runs-on: ubuntu-latest
     steps:
