--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,3 +10,8 @@ jobs:
     uses: ./.github/workflows/restore-build.yml
     with:
       solution-path: ./bugs/Dima.sln
+
+  restore-build-test-balta:
+    uses: ./.github/workflows/restore-build-test.yml
+    with:
+      solution-path: ./unit-tests/Balta.sln
