--- a/.github/workflows/restore-build-test.yml
+++ b/.github/workflows/restore-build-test.yml
@@ -9,9 +9,10 @@ on:
 
 jobs:
   restore-and-build:
-    uses: ./.github/workflows/restore-and-build.yml
-    with:
-      solution-path: ./unit-tests/Balta.sln
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run Test
+      run: dotnet test ${{ inputs.solution-path }}
   test:
     runs-on: ubuntu-latest
     steps:
