changing test yml

--- a/.github/workflows/restore-build-test.yml
+++ b/.github/workflows/restore-build-test.yml
@@ -13,6 +13,7 @@ jobs:
     with:
       solution-path: ./unit-tests/Balta.sln
   test:
+    needs: restore-and-build
     runs-on: ubuntu-latest
     steps:
     - name: Run Test
