--- a/.github/workflows/restore-build-test.yml
+++ b/.github/workflows/restore-build-test.yml
@@ -8,22 +8,14 @@ on:
         type: string
 
 jobs:
+
   build-and-test:
+    uses: ./.github/workflows/restore-build.yml
+    with:
+      solution-path: ${{ inputs.solution-path }}
+  test:
+    needs: restore-and-build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    
-    - name: Restore Solution
-      run: dotnet restore ${{ inputs.solution-path }}
-    
-    - name: Build Solution
-      run: dotnet build --no-restore ${{ inputs.solution-path }}
-
     - name: Run Test
       run: dotnet test ${{ inputs.solution-path }}
