--- a/.github/workflows/restore-build.yml
+++ b/.github/workflows/restore-build.yml
@@ -11,11 +11,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - run: mkdir -p path/to/artifact
-    - uses: actions/upload-artifact@master
-      with:
-        name: my-artifact
-        path: path/to/artifact
     - name: Checkout Code
       uses: actions/checkout@v4
     
@@ -29,3 +24,12 @@ jobs:
     
     - name: Build Solution
       run: dotnet build --no-restore ${{ inputs.solution-path }}
+    
+    - run: mkdir -p path/to/artifact
+    
+    - run: cp -r ${{ inputs.solution-path }}* path/to/artifact/
+
+    - uses: actions/upload-artifact@master
+      with:
+        name: my-artifact
+        path: path/to/artifact
