--- a/bugs/Dima.Web/Dima.Web.csproj
+++ b/bugs/Dima.Web/Dima.Web.csproj
@@ -7,6 +7,7 @@
         <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
         <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
       <UserSecretsId>b8bd36bf-c19a-49d3-9423-b8f1c8fda653</UserSecretsId>
+      <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
     <ItemGroup>
