--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -6,22 +6,14 @@ on:
       - '**'
 
 jobs:
-  restore-build-dima:
+  dima-ci:
     uses: ./.github/workflows/build-and-test.yml
     with:
-<<<<<<< Updated upstream
-      solution-path: ./bugs/
-=======
       solution-path: ./bugs/Dima.sln
       so: windows-latest
->>>>>>> Stashed changes
 
-  restore-build-test-balta:
+  balta-ci:
     uses: ./.github/workflows/build-and-test.yml
     with:
-<<<<<<< Updated upstream
-      solution-path: ./unit-tests/
-=======
       solution-path: ./unit-tests/Balta.sln
       so: ubuntu-latest
->>>>>>> Stashed changes
