--- a/bugs/Dima.E2ETests/Dima.E2ETests.csproj
+++ b/bugs/Dima.E2ETests/Dima.E2ETests.csproj
@@ -11,10 +11,18 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.25.0" />
+    <PackageReference Include="Testcontainers" Version="3.10.0" />
+    <PackageReference Include="Testcontainers.MsSql" Version="3.10.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dima.Api\Dima.Api.csproj" />
+    <ProjectReference Include="..\Dima.Core\Dima.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
