--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   dima:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
