--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   dima:
-    runs-on: windows-2022
+    # runs-on: windows-2022
+    runs-on: windows-latest
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
