--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   dima:
     # runs-on: windows-2022
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
