trying to solve compatibility problem

--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -1,14 +1,25 @@
 name: CI pipeline
 
+
+
 on:
   push:
     branches:
       - '**'
 
+
 jobs:
   dima:
     # runs-on: windows-2022
     runs-on: windows-2019
+    services:
+        mssql:
+          image: mcr.microsoft.com/mssql/server:2019-latest
+          ports:
+            - 37000:1433
+          env:
+            ACCEPT_EULA: Y
+            SA_PASSWORD: somePassw0rd!
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
