--- a/.github/workflows/CI-pipeline.yml
+++ b/.github/workflows/CI-pipeline.yml
@@ -1,42 +1,18 @@
 name: CI pipeline
 
-
-
 on:
   push:
     branches:
       - '**'
 
-
 jobs:
   dima:
-    # runs-on: windows-2022
-    # runs-on: windows-2019
-    runs-on: windows-latest
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    
-    - name: Restore Solution
-      run: dotnet restore ./bugs/Dima.sln
-    
-    - name: Build Solution
-      run: dotnet build --no-restore ./bugs/Dima.sln
+    uses: ./.github/workflows/build-and-test.yml
+    with:
+      solution-path: ./bugs/Dima.sln
 
-    - name: Run Test
-      run: dotnet test --no-restore ./bugs/Dima.sln
-#     uses: ./.github/workflows/build-and-test.yml
-#     with:
-#       solution-path: ./bugs/Dima.sln
-#       so: windows-latest
 
-#   balta:
-#     uses: ./.github/workflows/build-and-test.yml
-#     with:
-#       solution-path: ./unit-tests/Balta.sln
-#       so: ubuntu-latest
+  balta:
+    uses: ./.github/workflows/build-and-test.yml
+    with:
+      solution-path: ./unit-tests/Balta.sln
