adding configs to appsettings

--- a/bugs/Dima.Api/appsettings.json
+++ b/bugs/Dima.Api/appsettings.json
@@ -1,8 +1,9 @@
 {
   "FrontendUrl": "http://localhost:5028",
   "BackendUrl": "http://localhost:5164",
+  "ShouldRunMigrations": "true",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=dimadb;Trusted_Connection=true; TrustServerCertificate=True"
+    "DefaultConnection": "Server=127.0.0.1,37000;Database=dimadb;User Id=sa;Password=somePassw0rd!;TrustServerCertificate=True"
   },
   "StripeApiKey": "",
   "Logging": {
